Fixing Overflow Hero Image

--- a/newstyle.css
+++ b/newstyle.css
@@ -54,6 +54,7 @@ header a:hover {
 }
 .hero-container img {
   width: 130%;
+  max-width: 100vw;
   height: auto;
   display: block;
 }
