--- a/style.scss
+++ b/style.scss
@@ -59,6 +59,7 @@ header {
   width: 100%;
   img {
     width: 130%;
+    max-width: 100vw;
     height: auto;
     display: block;
   }
